Agregar imagenes al main

--- a/main.html
+++ b/main.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>KineApp — Presentación</title>
 
-    <!-- Fuente -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
 
@@ -38,8 +37,6 @@
             </div>
 
                 <div class="hero-right">
-                    <!-- Carrusel: el script `carousel.js` detecta imágenes en archives/ y las rota -->
-                    <!-- Añade tus rutas separadas por comas en el atributo data-images, por ejemplo: data-images="archives/2.jpg,archives/3.png" -->
                     <div class="carousel" aria-roledescription="carousel" aria-label="Imágenes de la clínica" data-images="archives/2.jpg">
                         <button class="carousel-btn prev" aria-label="Anterior">‹</button>
                         <img class="carousel-image" src="archives/1.jpg" alt="Imagen principal de la clínica">
@@ -52,26 +49,26 @@
             <section id="servicios" aria-label="Servicios destacables">
                 <div class="features">
                     <div class="card">
-                        <img src="images/photo2.jpg" alt="">
+                        <img src="archives/a1.jpg" alt="">
                         <div>
-                            <h4>Agenda inteligente</h4>
+                            <h4>Agenda inteligente.</h4>
                             <p>Reservas, recordatorios y control de citas en un solo lugar.</p>
                         </div>
                     </div>
 
                     <div class="card">
-                        <img src="images/photo3.jpg" alt="">
+                        <img src="archives/a2.jpg" alt="">
                         <div>
-                            <h4>Historial clínico</h4>
-                            <p>Notas estructuradas y acceso rápido a la evolución del paciente.</p>
+                            <h4>Especialidades.</h4>
+                            <p>Reintegro deportivo, kinesiologia respiratoria, traumatologia, kinesiologia infantil, etc.</p>
                         </div>
                     </div>
 
                     <div class="card">
-                        <img src="images/photo4.jpg" alt="">
+                        <img src="archives/a3.jpg" alt="">
                         <div>
-                            <h4>Material visual</h4>
-                            <p>Guías y ejercicios para compartir con tus pacientes fácilmente.</p>
+                            <h4>Cerca de ti.</h4>
+                            <p>Consulta cerca de ti <br>Calle sin nombre #1234.</p>
                         </div>
                     </div>
                 </div>
@@ -79,9 +76,9 @@
 
             <section id="galeria" aria-label="Galería">
                 <div class="gallery">
-                    <img src="images/photo5.jpg" alt="Galería 1">
-                    <img src="images/photo6.jpg" alt="Galería 2">
-                    <img src="images/photo7.jpg" alt="Galería 3">
+                    <img src="archives/b1.jpg" alt="Box 1">
+                    <img src="archives/b2.jpg" alt="Resepcion">
+                    <img src="archives/b3.jpg" alt="Galería 3">
                 </div>
             </section>
 
