Mejora de assets

--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
 
                 <div class="hero-right">
                     <div class="carousel" aria-roledescription="carousel" aria-label="Imágenes de la clínica" data-images="archives/2.jpg">
-                        <img class="carousel-image" src="archives/1.jpg" alt="Imagen principal de la clínica">
+                        <img class="carousel-image" src="archives/Traumatologia.png" alt="Imagen principal de la clínica">
                         <button class="carousel-btn prev" aria-label="Anterior">‹</button>
                         <button class="carousel-btn next" aria-label="Siguiente">›</button>
                         <div class="carousel-indicators" aria-hidden="false"></div>
